# ghost.so

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
TestELF/: Loop is good you are nigger  TestElf.cpp  readme.md
src/: Alias.h  Types.h  main.c
src/MapParser/: MapParser.c  MapParser.h
src/MappedObject/: MappedObject.c  MappedObject.h
src/RelocHandler/: RelocHandler.c  RelocHandler.h
src/ShellCode/: PTraceHelper.c  PTraceHelper.h  ShellCode.c  ShellCode.h  ShellCodeV2.c  ShellCodeV2.h
src/TargetBrief/: TargetBrief_t.c  TargetBrief_t.h
src/Util/: Util.c  Util.h
src/Util/AAManager/: AAManager.c  AAManager.h
src/Util/Assertions/: Assertions.h
src/Util/SHA-256/: readme.md
src/Util/Terminal/: ConsoleSystem.c  ConsoleSystem.h  Terminal.h
